add font the develop branch

--- a/src/app/(main)/globals.css
+++ b/src/app/(main)/globals.css
@@ -1,6 +1,18 @@
+@font-face {
+  font-family: 'Yekan';
+  src: url('/fonts/yekan.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+body {
+  font-family: 'Yekan', sans-serif;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 
 
 @source '../../node_modules/@heroui/theme/dist/**/*.{js,ts,jsx,tsx}';
